--- a/python-snippets/snippets.ipynb
+++ b/python-snippets/snippets.ipynb
@@ -360,13 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter \n",
     "import serial\n",
     "import time\n",
+    "from tkinter import filedialog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is how you make a simple GUI with a text box and button\n",
     "\n",
     "root = tkinter.Tk()\n",
     "root.title('TEST')\n",
@@ -387,6 +397,20 @@
     "myButton.pack(pady=10)\n",
     "\n",
     "root.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is how you get a file path by opening a file explorer\n",
+    "root = tkinter.Tk()\n",
+    "root.withdraw()\n",
+    "dataPath = filedialog.askopenfilename() # Ask user to select data\n",
+    "print('\\n\\nPath to flight data: %s\\n' % dataPath)\n",
+    "root.destroy()"
    ]
   }
  ]
