--- a/python-snippets/snippets.ipynb
+++ b/python-snippets/snippets.ipynb
@@ -338,17 +338,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "path = r\"C:\\Users\\nmark\\OneDrive\\Documents\\ME224\\6200.txt\"\n",
-    "data = get_data(path,(68,50))\n",
-    "for i in data:\n",
-    "    print(i)"
+    "def mav(x,y,num_avg): \n",
+    "    '''\n",
+    "    mav(x,y,num_avg) computes the moving average of the specified number of points\n",
+    "    of the inputted y and returns it as the new x values and new y values as two lists.\n",
+    "    '''\n",
+    "    ynew = []\n",
+    "    i = 0\n",
+    "    while i < (len(y) - num_avg + 1):\n",
+    "        reg = y[i:i+num_avg]\n",
+    "        mav = sum(reg)/num_avg\n",
+    "        ynew.append(mav)\n",
+    "        i += 1\n",
+    "\n",
+    "    lost = (x[-1] - x[-num_avg])\n",
+    "    xnew = np.linspace(0,x[-1] - lost,len(ynew))\n",
+    "\n",
+    "    return xnew,ynew"
    ]
   },
   {
