--- a/python-snippets/snippets.ipynb
+++ b/python-snippets/snippets.ipynb
@@ -184,6 +184,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# np.linspace(start,stop,numel) \n",
+    "low = 0\n",
+    "high = 10\n",
+    "numel = 6\n",
+    "a = np.linspace(low,high,numel,dtype=int)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# np.append(arr,value)\n",
     "a = np.zeros(10)\n",
     "a = np.append(a,4)  # np.append does not append to the original array but instead returns a copy\n",
@@ -210,20 +224,6 @@
     "# Create an array of random integers in a range (between 0 and two not including 2) and of a certain size\n",
     "arr1 = np.random.randint(0,2, size=(3, 3))  \n",
     "print(arr1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.linspace \n",
-    "low = 0\n",
-    "high = 10\n",
-    "numel = 6\n",
-    "a = np.linspace(low,high,numel,dtype=int)\n",
-    "print(a)"
    ]
   },
   {
