--- a/python-snippets/snippets.ipynb
+++ b/python-snippets/snippets.ipynb
@@ -14,13 +14,16 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python394jvsc74a57bd0f0a6e35e9bb8b68e332f7236e9bb08965be7a42f997ca8df5b2713dcaaabb3cd",
+   "name": "python3",
    "display_name": "Python 3.9.4 64-bit"
   },
   "metadata": {
    "interpreter": {
     "hash": "f0a6e35e9bb8b68e332f7236e9bb08965be7a42f997ca8df5b2713dcaaabb3cd"
    }
+  },
+  "interpreter": {
+   "hash": "f0a6e35e9bb8b68e332f7236e9bb08965be7a42f997ca8df5b2713dcaaabb3cd"
   }
  },
  "nbformat": 4,
