--- a/diffeq/ode.ipynb
+++ b/diffeq/ode.ipynb
@@ -1,26 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Euler vs. Runge-Kutta Integration\n",
-    "We will solve an ODE using Euler integration and RK4 and compare the results.\n",
-    "The ODE we will be solving is the following:\n",
-    "$$\n",
-    "\\frac{df}{dx} = 2x \\\\ x \\in \\ [0,3] \\  \\\\ f(0) = 0\n",
-    "$$\n",
-    "\n",
-    "Analytically, we know the solution is \n",
-    "$$\n",
-    "f(x) = x^2\n",
-    "$$"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +37,22 @@
     "    return sol\n",
     "\n",
     "def integrate(x,x0,tspan,dt,method='euler'):\n",
+    "    '''\n",
+    "    Numerically intergates x(t) forward in time in the \n",
+    "    given time range, initial condition, step size, and\n",
+    "    integration method.\n",
+    "    Typically x(t) = df/dt, thus \n",
+    "    f(t) will be computed and returned by this function.\n",
+    "    Args:\n",
+    "        x (function): the function to integrate\n",
+    "        x0 (float): initial condition at x(t=0) \n",
+    "        tspan (tuple): the start and end times as a list or tuple of length 2\n",
+    "        dt (float): step size\n",
+    "        method (string): the integration method to use (see below for options)\n",
+    "    Returns:\n",
+    "        sol: a numpy array which is an approximation of the integral of x(t)\n",
+    "    '''\n",
+    "\n",
     "    t = np.arange(tspan[0], tspan[1]+dt, dt)\n",
     "    sol = np.zeros(len(t))\n",
     "    sol[0] = x0\n",
@@ -73,13 +71,12 @@
     "    else:\n",
     "        raise ValueError(f'No valid integration method \"{method}\"')\n",
     "\n",
-    "    return sol\n",
-    "    "
+    "    return sol"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -130,6 +127,16 @@
     "ax.set(ylabel=r\"$f(x)$\",xlabel=\"x\")\n",
     "ax.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Integrating backwards in time\n",
+    "Now we will consider the same function, except instead of being given the initial condition $f(x=0) = -1$ we will start with the final condition,\n",
+    "$f(x=1) = -e^{-1}$"
    ]
   },
   {
